[package]
name = "advent-of-code-2019"
version = "0.1.0"
authors = ["Benjamin Bergman <benjamin.bergman@humanrights.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "~0.8"

[[bin]]
name = "aoc01"
path = "src/aoc01.rs"

[[bin]]
name = "aoc02"
path = "src/aoc02.rs"
